# modules/apps/headless/headless-cmp/headless-cmp-impl/rest-openapi.yaml
@@ -1,5 +1,72 @@
 components:
     schemas:
+        ContentCoverage:
+            properties:
+                matrixCells:
+                    items:
+                        $ref: "#/components/schemas/MatrixCell"
+                    readOnly: true
+                    type: array
+                funnelStages:
+                    items:
+                        $ref: "#/components/schemas/FunnelStage"
+                    readOnly: true
+                    type: array
+                personas:
+                    items:
+                        $ref: "#/components/schemas/Persona"
+                    readOnly: true
+                    type: array
+                totalAssetCount:
+                    format: int64
+                    readOnly: true
+                    type: integer
+        FunnelStage:
+            properties:
+                description:
+                    readOnly: true
+                    type: string
+                externalReferenceCode:
+                    readOnly: true
+                    type: string
+                id:
+                    readOnly: true
+                    type: string
+                name:
+                    readOnly: true
+                    type: string
+                uncategorized:
+                    readOnly: true
+                    type: boolean
+        MatrixCell:
+            properties:
+                funnelStageId:
+                    readOnly: true
+                    type: string
+                personaId:
+                    readOnly: true
+                    type: string
+                totalCount:
+                    format: int64
+                    readOnly: true
+                    type: integer
+        Persona:
+            properties:
+                description:
+                    readOnly: true
+                    type: string
+                externalReferenceCode:
+                    readOnly: true
+                    type: string
+                id:
+                    readOnly: true
+                    type: string
+                name:
+                    readOnly: true
+                    type: string
+                uncategorized:
+                    readOnly: true
+                    type: boolean
         TaskAssignee:
             properties:
                 externalReferenceCode:
@@ -43,6 +110,32 @@ info:
     version: v1.0
 openapi: 3.0.1
 paths:
+    "/projects/{projectId}/content-coverage":
+        get:
+            operationId: getProjectContentCoverage
+            parameters:
+                -   in: path
+                    name: projectId
+                    required: true
+                    schema:
+                        format: int64
+                        type: integer
+                -   in: query
+                    name: cmsGroupId
+                    required: true
+                    schema:
+                        format: int64
+                        type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ContentCoverage"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/ContentCoverage"
+            tags: ["ContentCoverage"]
     "/projects/{projectId}/task-statistics":
         get:
             operationId: getProjectTaskStatistics
